@@ -1,3 +1,8 @@
+2015-01-20  c.hetherington  <cth@carlh.net>
+
+	* More informative error when failing to decode
+	JPEG2000 files.
+
 2015-01-15  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.0.34 released.
